	- Better optimize assembling of a players permissions and allow the * node to populate all registered superperms.
	- Fixed text when adding a subgroup to not say the player was moved.
	- Update to new Bukkit Event system.
	- Update GroupManagerBridge for new event system.
	- Fixed a random null error upon a player portaling.
	- Fixed infinite loop error on player join.
	- Optimized code to only update the player logging in instead of all players online.
	- Added recursive loop detection for World mirroring (you may not set the main world as a mirror of another).
	- Fixed fetching world data so it no longer returns the mirrored world for groups. Each world data holder now points to the correct data set, so can be returned as an object.
	- Changed addSubGroup() to only add the group if it doesn't already exist (no need to update an already existing group).
	- addSubGroup now returns a boolean for success/failure.
	- '/manuaddsub' now correctly reports if it was able to add the sub group.
	- Allow negation to the * permission node when populating superperms.
	- Fix trying to modify an unmodifiable collection breaking superperms.
	- Fixed subgroups (I broke earlier).
	- Check for a null player object in the PlayerTeleportEvent.
	- Trap errors in fetching the mirrors map.
	- Fixed an infinite loop error when using '/manudel' on a logged in player. It caused setDefaultGroup to trigger a bukkit update when no GM User existed yet.
	- do not allow inherited permissions to negate higher perms.
	- Fixed a bug when pushing superperms in the wrong order.
	- Fix players retaining permissions when demoted.
	- Auto sort permissions on load to speed up population of superperms.
	- Negating a parent node after adding all nodes with * will now correctly remove all child nodes of that parent before populating superperms.
	  eg.
	      - '*'
	      - -vanish.*
	      - vanish.standard
	- Track the 'onPlayerChangeWorld' event as some teleports seem to not be triggering a world move.